// AuthService v2.5 - Final Schema

Table users {
  id uuid [pk, default: `uuid_generate_v4()`]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [not null]
  role_id integer [not null]
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  deleted_at timestamp [note: 'Soft delete']
}

Table roles {
  id integer [pk, increment]
  name varchar(50) [unique, not null, note: 'ADMIN, USER, EDITOR']
  description text
}

Table profiles {
  id uuid [pk]
  user_id uuid [unique, not null]
  first_name varchar(100)
  last_name varchar(100)
  phone varchar(20)
  avatar_url varchar(255)
}

Table addresses {
  id uuid [pk]
  user_id uuid [not null]
  type varchar(20) [note: 'billing, shipping, home']
  street varchar(255)
  city varchar(100)
  state varchar(100)
  zip_code varchar(20)
  country_code varchar(3) [note: 'ISO 3166-1 alpha-3']
  is_main boolean [default: true]
}

Table user_attributes {
  id uuid [pk]
  user_id uuid [unique, not null]
  preferences jsonb [note: 'UI Theme, Language, Notifications']
  custom_data jsonb [note: 'Dynamic N-data: experimental fields or legacy tags']
  updated_at timestamp [default: `now()`]
}

Table audit_logs {
  id uuid [pk]
  admin_id uuid [not null]
  action varchar(50) [not null, note: 'CREATE_USER, DELETE_USER, CHANGE_ROLE']
  target_user_id uuid
  details jsonb [note: 'Diff of old and new values']
  created_at timestamp [default: `now()`]
}

// Relaciones
Ref: roles.id < users.role_id
Ref: users.id - profiles.user_id [update: cascade, delete: cascade]
Ref: users.id < addresses.user_id [update: cascade, delete: cascade]
Ref: users.id - user_attributes.user_id [update: cascade, delete: cascade]
Ref: users.id < audit_logs.admin_id